syntax = "proto3";

package watched;

option go_package = "./pkg/watched/pb";

import "google/protobuf/timestamp.proto";

service WatchedService {
  rpc WatchMovie(WatchMovieRequest) returns (StatusResponse) {}
  rpc RatingMovie(RatingMovieRequest) returns (MovieResponse) {}
  rpc WatchedList(WatchedListRequest) returns (WatchedListResponse) {}
}

message Movie {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp date = 4;
  float rate = 5;
  string cover = 6;
  uint64 userId = 7;
}

// movie response
message MovieResponse {
  Movie movie = 1;
  string status = 2;
  string error = 3;
}

message WatchMovieRequest {
  uint32 movieId = 1;
  uint64 userId = 2;
}

// status response for movie
message StatusResponse {
  string status = 1;
  string error = 2;
}

// list of movies response
message WatchedListResponse {
  repeated Movie movies = 1;
  string status = 2;
  string error = 3;
}

message RatingMovieRequest {
  uint32 movieId = 1;
  uint32 rating = 2;
  string review = 3;
  uint64 userId = 4;
}

// movies list request
message WatchedListRequest {
  string sortBy = 1;
  string direction = 2;
  uint32 page = 3;
  uint32 size = 4;
  uint64 userId = 5;
}
